Connect coroutines with rest api and compose UI

--- a/app/src/main/res/layout/left_hand_menu_header.xml
+++ b/app/src/main/res/layout/left_hand_menu_header.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/semiboldmyreadpro"
-            android:text="@{viewModel.userName}"
+            android:text="Vadym Popovych"
             android:textColor="@color/black"
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"
-            android:text="@{viewModel.userEmail}"
+            android:text="vadympopovychn24@gmail.com"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/first_name_tv"
