coroutine fragment delay 3 second

--- a/app/src/main/res/layout/fragment_coroutine.xml
+++ b/app/src/main/res/layout/fragment_coroutine.xml
@@ -37,7 +37,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/coroutines"
                 android:textColor="@color/black"
-                android:textSize="@dimen/large_text_size" />
+                android:textSize="@dimen/large_text_size"
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
         </LinearLayout>
 
