--- a/app/src/main/res/layout/app_bar_public.xml
+++ b/app/src/main/res/layout/app_bar_public.xml
@@ -23,7 +23,7 @@
             android:layout_weight="1">
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fl_for_fragment_public"
+                android:id="@+id/fragment_container"
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
