--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -73,5 +73,5 @@
 
     <dimen name="img_splash_background">220dp</dimen>
     <dimen name="padding_top_login">30dp</dimen>
-
+    <dimen name="standard_button_height">40dp</dimen>
 </resources>
