--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -51,14 +51,17 @@
                 android:layout_marginEnd="@dimen/xlarge_padding">
 
                 <include
+                    android:id="@+id/include_email"
                     layout="@layout/reset_password_enter_email"
                     app:viewModel="@{viewModel}" />
 
                 <include
+                    android:id="@+id/include_confirm_code"
                     layout="@layout/reset_password_enter_code"
                     app:viewModel="@{viewModel}" />
 
                 <include
+                    android:id="@+id/include_password"
                     layout="@layout/reset_password_new_password"
                     app:viewModel="@{viewModel}" />
 
