--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -30,7 +30,6 @@
             app:title="@string/sign_up"
             app:titleTextColor="@android:color/black" />
 
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,14 +43,16 @@
                 android:paddingEnd="@dimen/xlarge_padding">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/input_layout_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_padding"
                     android:hint="@string/first_name"
                     app:boxBackgroundColor="@android:color/transparent"
-                    app:error="@{viewModel.firstNameError}">
+                    app:hintTextColor="@color/green_btn">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_first_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -64,14 +65,16 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/input_layout_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_padding"
                     android:hint="@string/last_name"
                     app:boxBackgroundColor="@android:color/transparent"
-                    app:error="@{viewModel.lastNameError}">
+                    app:hintTextColor="@color/green_btn">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_last_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -84,14 +87,16 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/input_layout_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_padding"
                     android:hint="@string/email"
                     app:boxBackgroundColor="@android:color/transparent"
-                    app:error="@{viewModel.emailError}">
+                    app:hintTextColor="@color/green_btn">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -104,15 +109,17 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/input_layout_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_padding"
                     android:hint="@string/password"
                     app:boxBackgroundColor="@android:color/transparent"
-                    app:error="@{viewModel.passwordError}"
+                    app:hintTextColor="@color/green_btn"
                     app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -125,15 +132,17 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/input_layout_confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_padding"
                     android:hint="@string/confirm_password"
                     app:boxBackgroundColor="@android:color/transparent"
-                    app:error="@{viewModel.confirmPasswordError}"
+                    app:hintTextColor="@color/green_btn"
                     app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_confirm_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionDone"
@@ -145,29 +154,21 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/medium_padding"
-                    android:layout_marginBottom="@dimen/xlarge_padding">
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/medium_item_size"
-                        android:backgroundTint="@color/green_approved_text"
-                        android:onClick="@{() -> viewModel.signUp()}"
-                        android:text="@string/sign_up"
-                        android:textColor="@color/white"
-                        android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-
-                    <ProgressBar
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-                </FrameLayout>
             </LinearLayout>
         </ScrollView>
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+            android:id="@+id/btn_signup"
+            style="@style/primary_сircular_progress_button"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="@dimen/xlarge_padding"
+            android:text="@string/sign_up" />
+
+
     </LinearLayout>
 </layout>
