--- a/app/src/main/res/layout/reset_password_enter_code.xml
+++ b/app/src/main/res/layout/reset_password_enter_code.xml
@@ -33,7 +33,6 @@
             android:textColor="@android:color/black"
             android:textStyle="bold" />
 
-
         <com.chaos.view.PinView
             android:id="@+id/codeView"
             style="@style/PinWidget.PinView"
@@ -41,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:cursorVisible="true"
+            android:imeOptions="actionDone"
             android:inputType="number"
             android:padding="@dimen/xlarge_padding"
             android:text="@={viewModel.code}"
@@ -67,27 +67,13 @@
             android:paddingEnd="@dimen/xlarge_padding"
             android:text="@string/enter_code_timer_hint" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+            android:id="@+id/btn_confirm_code"
+            style="@style/primary_сircular_progress_button"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/medium_padding"
-            android:layout_marginBottom="@dimen/xlarge_padding">
+            android:layout_marginBottom="@dimen/xlarge_padding"
+            android:text="@string/continue_btn" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/medium_item_size"
-                android:backgroundTint="@color/green_approved_text"
-                android:onClick="@{() -> viewModel.action()}"
-                android:text="send"
-                android:textColor="@color/white"
-                android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-
-            <ProgressBar
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-        </FrameLayout>
     </LinearLayout>
 </layout>
