--- a/app/src/main/res/layout/reset_password_enter_email.xml
+++ b/app/src/main/res/layout/reset_password_enter_email.xml
@@ -27,21 +27,22 @@
             android:paddingStart="@dimen/xlarge_padding"
             android:paddingEnd="@dimen/xlarge_padding"
             android:text="@string/reset_password_title"
-            android:textColor="@color/green_approved_text"
+            android:textColor="@color/green_btn"
             android:textSize="@dimen/large_text_size"
             android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/xlarge_padding"
             android:hint="@string/email"
             android:visibility="@{safeUnbox(viewModel.emailVisible) ? View.VISIBLE : View.GONE}"
             app:boxBackgroundColor="@android:color/transparent"
-            app:error="@{viewModel.emailError}">
+            app:hintTextColor="@color/green_btn">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email"
+                android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
@@ -65,29 +66,14 @@
             android:textColor="@android:color/black"
             android:textStyle="bold" />
 
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+            android:id="@+id/btn_confirm_email"
+            style="@style/primary_сircular_progress_button"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/medium_padding"
-            android:layout_marginBottom="@dimen/xlarge_padding">
+            android:layout_marginBottom="@dimen/xlarge_padding"
+            android:text="@string/continue_btn" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/medium_item_size"
-                android:backgroundTint="@color/green_approved_text"
-                android:onClick="@{() -> viewModel.action()}"
-                android:text="send"
-                android:textColor="@color/white"
-                android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-
-            <ProgressBar
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-        </FrameLayout>
 
         <TextView
             android:layout_width="match_parent"
