--- a/app/src/main/res/layout/reset_password_new_password.xml
+++ b/app/src/main/res/layout/reset_password_new_password.xml
@@ -33,15 +33,17 @@
             android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:hint="@string/password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:error="@{viewModel.passwordError}"
+            app:hintTextColor="@color/green_btn"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionNext"
@@ -54,16 +56,17 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:hint="@string/confirm_password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:error="@{viewModel.confirmPasswordError}"
+            app:hintTextColor="@color/green_btn"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/confirmPassword"
+                android:id="@+id/input_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
@@ -75,28 +78,13 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+            android:id="@+id/btn_login"
+            style="@style/primary_сircular_progress_button"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/xxlarge_padding"
+            android:layout_marginBottom="@dimen/xlarge_padding"
+            android:text="@string/login" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/xlarge_padding"
-            android:layout_marginBottom="@dimen/xlarge_padding">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/medium_item_size"
-                android:backgroundTint="@color/green_approved_text"
-                android:onClick="@{() -> viewModel.action()}"
-                android:text="@string/login"
-                android:textColor="@color/white"
-                android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-
-            <ProgressBar
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-        </FrameLayout>
     </LinearLayout>
 </layout>
