--- a/app/src/main/res/layout/reset_password_enter_email.xml
+++ b/app/src/main/res/layout/reset_password_enter_email.xml
@@ -15,10 +15,12 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/container_enter_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="vertical"
-        android:visibility="@{safeUnbox(viewModel.emailVisible) ? View.VISIBLE : View.GONE}">
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -37,7 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/xlarge_padding"
             android:hint="@string/email"
-            android:visibility="@{safeUnbox(viewModel.emailVisible) ? View.VISIBLE : View.GONE}"
             app:boxBackgroundColor="@android:color/transparent"
             app:hintTextColor="@color/green_btn">
 
@@ -49,8 +50,7 @@
                 android:inputType="textEmailAddress"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
-                android:singleLine="true"
-                android:text="@={viewModel.email}" />
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
