--- a/app/src/main/res/layout/reset_password_enter_code.xml
+++ b/app/src/main/res/layout/reset_password_enter_code.xml
@@ -16,10 +16,12 @@
 
 
     <LinearLayout
+        android:id="@+id/container_enter_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="vertical"
-        android:visibility="@{safeUnbox(viewModel.codeVisible) ? View.VISIBLE : View.GONE}">
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -43,7 +45,6 @@
             android:imeOptions="actionDone"
             android:inputType="number"
             android:padding="@dimen/xlarge_padding"
-            android:text="@={viewModel.code}"
             android:textColor="@android:color/black"
             android:textSize="@dimen/large_text_size"
             android:textStyle="bold"
