--- a/app/src/main/res/layout/reset_password_enter_password.xml
+++ b/app/src/main/res/layout/reset_password_enter_password.xml
@@ -15,10 +15,12 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/container_enter_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="vertical"
-        android:visibility="@{safeUnbox(viewModel.passwordFieldsVisible) ? View.VISIBLE : View.GONE}">
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -50,8 +52,7 @@
                 android:inputType="textPassword"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
-                android:singleLine="true"
-                android:text="@={viewModel.password}" />
+                android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,8 +74,7 @@
                 android:inputType="textPassword"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
-                android:singleLine="true"
-                android:text="@={viewModel.confirmPassword}" />
+                android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
