--- a/app/src/main/res/layout/fragment_reset_email.xml
+++ b/app/src/main/res/layout/fragment_reset_email.xml
@@ -41,8 +41,8 @@
                 android:layout_marginEnd="@dimen/xlarge_padding">
 
                 <include
-                    android:id="@+id/include_password"
-                    layout="@layout/reset_password_enter_password" />
+                    android:id="@+id/include_email"
+                    layout="@layout/reset_password_enter_email" />
 
             </FrameLayout>
 
