--- a/app/src/main/res/layout/reset_password_enter_password.xml
+++ b/app/src/main/res/layout/reset_password_enter_password.xml
@@ -4,23 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.template.ui.login.LoginActivity">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="viewModel"
-            type="com.android.template.ui.login.reset.viewmodel.PasswordResetViewModel" />
-
-    </data>
-
     <LinearLayout
         android:id="@+id/container_enter_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:orientation="vertical"
-        tools:visibility="visible">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
