Refactore app, Provide Retrofit instead of FAN, Migrate from Rx2 to Rx3, implement theMovieDB signUp/Login with local DB prefs and new error handling, remember acc, remove Observables from login screen and more

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -59,8 +59,7 @@
                         android:inputType="textCapSentences"
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:text="@={viewModel.firstName}" />
+                        android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,8 +80,7 @@
                         android:inputType="textCapSentences"
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:text="@={viewModel.lastName}" />
+                        android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,8 +101,7 @@
                         android:inputType="textEmailAddress"
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:text="@={viewModel.email}" />
+                        android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -126,8 +123,7 @@
                         android:inputType="textPassword"
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:text="@={viewModel.password}" />
+                        android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -149,8 +145,7 @@
                         android:inputType="textPassword"
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
-                        android:singleLine="true"
-                        android:text="@={viewModel.confirmPassword}" />
+                        android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
