--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
         android:layout_height="?actionBarSize"
         android:background="@android:color/white"
         android:elevation="@dimen/small_padding"
-        app:title="@string/home"/>
+        app:title="@string/bottom_menu_4"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/home"
+            android:text="@string/bottom_menu_4"
             android:textColor="@color/black"
             android:textSize="@dimen/large_text_size" />
 
