--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -23,7 +23,7 @@
             android:layout_height="?actionBarSize"
             android:background="@android:color/white"
             android:elevation="@dimen/small_padding"
-            app:title="@string/liked"/>
+            app:title="@string/bottom_menu_2"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/liked"
+                android:text="@string/bottom_menu_2"
                 android:textColor="@color/black"
                 android:textSize="@dimen/large_text_size" />
 
