--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -23,7 +23,7 @@
             android:layout_height="?actionBarSize"
             android:background="@android:color/white"
             android:elevation="@dimen/small_padding"
-            app:title="@string/recommendations"/>
+            app:title="@string/popular"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,7 +35,7 @@
                 android:id="@+id/tv_recommentdations"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/recommendations"
+                android:text="@string/popular"
                 android:textColor="@color/black"
                 android:textSize="@dimen/large_text_size" />
 
