settings change password, validation & update password in DB

--- a/app/src/main/res/layout/fragment_change_passwords.xml
+++ b/app/src/main/res/layout/fragment_change_passwords.xml
@@ -26,6 +26,7 @@
             app:titleTextColor="@android:color/black"/>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_old_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_padding"
@@ -33,19 +34,19 @@
             android:layout_marginEnd="@dimen/default_padding"
             android:hint="@string/old_password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:error="@{viewModel.oldPasswordError}"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_old_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword"
-                android:text="@={viewModel.oldPassword}" />
+                android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_new_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_padding"
@@ -53,19 +54,19 @@
             android:layout_marginEnd="@dimen/default_padding"
             android:hint="@string/new_password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:error="@{viewModel.newPasswordError}"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword"
-                android:text="@={viewModel.newPassword}" />
+                android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_padding"
@@ -73,15 +74,14 @@
             android:layout_marginEnd="@dimen/default_padding"
             android:hint="@string/confirm_password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:error="@{viewModel.confirmNewPasswordError}"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:text="@={viewModel.confirmNewPassword}" />
+                android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,22 +89,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_padding"
-            android:layout_marginTop="@dimen/default_padding"
+            android:layout_marginTop="@dimen/large_padding"
             android:layout_marginEnd="@dimen/default_padding">
 
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+                android:id="@+id/btn_save"
+                style="@style/primary_сircular_progress_button"
                 android:layout_gravity="center"
-                android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:onClick="@{() -> viewModel.save()}"
-                android:text="@string/save"
-                android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />
+                android:text="@string/save" />
 
         </FrameLayout>
 
